fix text&bg color dark mode

--- a/src/css/sections/faq.css
+++ b/src/css/sections/faq.css
@@ -47,7 +47,7 @@
   width: 12px;
   height: 6px;
   margin: 13px 10px;
-  fill: var(--black);
+  fill: var(--text);
   flex-shrink: 0;
   transition: transform var(--animation);
 }
