--- a/src/css/sections/hero-2.css
+++ b/src/css/sections/hero-2.css
@@ -91,7 +91,7 @@ main {
 
 .social__list {
   padding: 32px 0;
-  background-color: var(--light-grey);
+  background-color: var(--bg-form);
   display: flex;
   flex-direction: column;
   align-items: center;
