--- a/src/css/sections/my-projects.css
+++ b/src/css/sections/my-projects.css
@@ -52,7 +52,7 @@
   font-weight: 500;
   border-radius: 8px;
   padding: 12px 24px;
-  background: var(--light-grey);
+  background: var(--bg-form);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
